# synth-rag

./: .env  .gitignore  404.html  BENCHMARKING_SUMMARY.md  README.md  index.html  mkdocs.yml  objects.inv  prompts.md  pyproject.toml  report.typ  sitemap.xml  vhs.md
.cursor/plans/: add-vlm-pipeline-67e3db95.plan.md  clone-computo-repos-ad4ed2d3.plan.md  m-3c31dbe8.plan.md  paperqa-computo-script-6ba21ce0.plan.md  ragbench-benchmarking-system-cc2aa300.plan.md  setup-dependency-466e2203.plan.md
.github/workflows/: ci.yml
api/manuals_agent/: index.html
api/manuals_ingest/: index.html
api/manuals_query/: index.html
api/manuals_ui/: index.html
api/settings/: index.html
architecture/: index.html
benchmarking/: index.html
docs/: architecture.md  benchmarking.md  index.md  quickstart.md  report.typ  setup.md  troubleshooting.md  usage.md
docs/api/: manuals_agent.md  manuals_ingest.md  manuals_query.md  manuals_ui.md  settings.md
documents/computo/: computo_repos.csv
documents/qdrant-docs/: Qdrant_and_LlamaIndex_—_A_new_way_to_keep_your_Q&A_systems_up_to_date.ipynb  qdrant_component_summaries.md
documents/ui-docs/: gradio.md
logs/benchmark_ragbench/emanual/: 20251130_020601_metrics.json  20251130_020601_raw_results.jsonl  20251130_020601_run_config.json  20251130_020601_summary.csv  20251206_092408_detailed_results.jsonl  20251206_092408_metrics.json  20251206_092408_raw_results.jsonl  20251206_092408_run_config.json  20251206_104821_detailed_results.jsonl  20251206_104821_metrics.json  20251206_104821_raw_results.jsonl  20251206_104821_run_config.json  20251206_104821_summary.csv  20251206_111049_detailed_results.jsonl  20251206_111049_raw_results.jsonl  20251206_113939_raw_results.jsonl  20251206_113939_run_config.json  20251206_114654_raw_results.jsonl  20251206_114654_run_config.json  20251206_114823_raw_results.jsonl  (+3 more)
logs/manuals_queries/: 20251125_215119.json  20251205_095113.json  20251205_144458.json  20251206_084324.json  20251206_084934.json
outputs/: 2012.09302_chunks.json  demo.tape  demo_benchmark_ingest.tape  demo_benchmark_runner.tape  demo_manuals_ingest.tape  demo_manuals_query.tape
prompts/: benchmarking.md  ragbench-README.md  ragbench-random3.json  report.md  vhs-readme.md
quickstart/: index.html
search/: search_index.json
setup/: index.html
src/qdrant_init/: __init__.py  docling_qdrant.ipynb  main.py  manuals_agent.py  manuals_ingest.py  manuals_query.py  manuals_ui.py  paperqa_computo.py  settings.py
src/synth_rag/: __init__.py  benchmark_ingest.py  benchmark_metrics.py  benchmark_runner.py  main.py  manuals_agent.py  manuals_ingest.py  manuals_query.py  manuals_ui.py  settings.py
usage/: index.html
(+14 files in other folders)
