[project]
name = "qdrant-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adhithya Bhaskar", email = "adhithyabhaskar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "brave-search>=0.1.8",
    "colpali-engine>=0.3.13",
    "fastembed>=0.4.1",
    "gradio>=6.0.1",
    "ipykernel>=7.1.0",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "notebook>=7.5.0",
    "openai>=2.8.1",
    "pymupdf>=1.26.6",
    "pypdfium2>=5.0.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.12.1",
    "semantic-text-splitter>=0.28.0",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
]

[project.scripts]
qdrant-init = "qdrant_init:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
